Fix breadcrumb word wrap issue.

--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -12,7 +12,6 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
-        width: calc(100% - 210px);
     }
 
     i {
