--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 /*
 	Theme Name: Mynote
-	Theme URI: https://github.com/terrylinooo/mynote
-	Description: Mynote is a WordPress theme with preferred features for developers and programmers.
+	Theme URI: https://terryl.in/en/repository/mynote/
+	Description: Mynote is a responsive, clean, Markdown friendly WordPress blog theme. It is based on Bootstrap 4 and Fontawesome 5. It is suitable for programming, business, technical, professional, niche and any kind of blogging sites. Mynote has landing-page templates so that can your highly customize your homepage, make your website unique and professional.
 	Version: 1.0.13
 	Author: Terry Lin
 	Author URI: https://terryl.in
 	Tags: two-columns, right-sidebar, custom-menu, custom-logo, custom-header, featured-images, footer-widgets, threaded-comments, translation-ready
 	License: GNU General Public License v3 or later
-  License URI: http://www.gnu.org/licenses/gpl-3.0.html
+    License URI: http://www.gnu.org/licenses/gpl-3.0.html
 	Text Domain: mynote
 */
 ::selection {
@@ -1323,7 +1323,6 @@ nav[data-toggle='toc'] .nav-link.active + ul {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width: calc(100% - 210px);
 }
 .breadcrumb i {
   color: #333333;
